# fivedesigner

./: .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE_STRUCTURE.md  assets_example.json  eslint.config.js  fix-encoding.cjs  fix-encoding.ps1  fix-encoding.py  fix-unused.mjs  index.html  package-lock.json  package.json  release.ps1  tmp_kling_doc_extracted.txt  ts_errors.txt  tsc_output.txt  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  typecheck3.txt  typecheck_errors.txt  typecheck_result.txt  typecheck_strict.txt  update.json  upload-release.ps1  vite.config.js  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.tauri/: update-keys.pub
.trae/documents/: ai-models-integration-plan.md  完善资产管理页面.md  (+2 more)
api/: Dockerfile  README.md  docker-compose.yml  requirements.txt  upscale_api.py
doc-api/: 2026年最新AI模型分类列表（按对话_图片_视频_音频）.md  可灵 AI 3.0 生图生视频 API 完整调用手册（2023 年 10 月 1 日）.md
docs/: agent-mode-design.md
playwright-report/: index.html
scripts/: page-sweep.mjs  sign-release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  agents.json  tasks.json  tauri.conf.json  vendors.json
src-tauri/capabilities/: browser-capability.json  main-capability.json
src-tauri/scripts/: generate_jianying_draft.py
src-tauri/src/: browser_manager.rs  jimeng_automation.rs  jimeng_automation_v2.rs  jimeng_diagnostic.rs  lib.rs  main.rs  modelscope.rs  video_scene_detection.rs
test-results/: .last-run.json  page-sweep.json
(+370 files in other folders)
