[package]
name = "fivedesigner"
version = "1.0.0"
description = "FiveDesigner - AI Video Storyboard Tool"
authors = ["FiveDesigner Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fivedesigner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
zip = "0.6"
futures-util = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
